# WebWidgets

./: constraints.txt  pyproject.toml
.github/workflows/: cd-testpypi.yml  ci-full.yml  ci-quick.yml  ci.yml  test-latest.yml
tests/compilation/: test_compile_css.py  test_css.py  test_css_rule.py  test_css_sections.py  test_html_node.py  test_html_tags.py  wrap_core_css.py
tests/compilation/html/: test_html_node.py
tests/utility/: test_representation.py  test_sanitizing.py  test_sizes.py  test_validation.py
tests/utility/sizes/: test_size.py
tests/website/: test_website.py
tests/widgets/: conftest.py  render_page.py  test_box.py  test_page.py  test_render_page.py
tests/widgets/containers/: test_box.py
webwidgets/: __init__.py
webwidgets/compilation/: __init__.py
webwidgets/compilation/css/: __init__.py  css.py  css_rule.py
webwidgets/compilation/css/sections/: __init__.py  css_preamble.py  css_section.py
webwidgets/compilation/html/: __init__.py  html_node.py  html_tags.py
webwidgets/utility/: __init__.py  representation.py  sanitizing.py  sizes.py  validation.py
webwidgets/utility/sanitizing/: html_entities.py  sanitizing.py
webwidgets/website/: __init__.py  compiled_website.py  website.py
webwidgets/widgets/: __init__.py  widget.py
webwidgets/widgets/containers/: __init__.py  box.py  container.py  page.py
