[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webwidgets"
version = "0.1.0"
description = "A Python package for designing web UIs."
keywords = ["webui", "design"]
authors = [
    { name="mlaasri" }
]
license-files = { paths = ["LICENSE"] }
requires-python = ">= 3.9"
