[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webwidgets"
dynamic = ["version"]
description = "A Python package for designing web UIs."
keywords = ["webui", "design"]
authors = [
    { name="mlaasri" }
]
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.9"

[tool.hatch.version]
path = "webwidgets/__init__.py"

[tool.hatch.build]
directory = "dist"